[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Hauler.gd" type="Script" id=1]
[ext_resource path="res://assets/Hauler back 1.png" type="Texture" id=2]
[ext_resource path="res://assets/Hauler back up 1.png" type="Texture" id=3]
[ext_resource path="res://assets/Hauler back up 2.png" type="Texture" id=4]
[ext_resource path="res://assets/Hauler back down 2.png" type="Texture" id=5]
[ext_resource path="res://assets/Hauler back down 1.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "straight",
"speed": 1.0
} ]

[node name="Hauler" type="Area2D"]
script = ExtResource( 1 )

[node name="InvicibilityTimer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "straight"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 104, -24, 104, 24, -64, 24, -64, -16, 40, -16, 40, -24 )

[connection signal="body_entered" from="." to="." method="_on_Hauler_body_entered"]
[connection signal="timeout" from="InvicibilityTimer" to="." method="_on_InvicibilityTimer_timeout"]
